fix: incorrect side buttons position when help/error is visible

--- a/src/scss/shared/side_btns.scss
+++ b/src/scss/shared/side_btns.scss
@@ -1,3 +1,4 @@
 .side_btns {
+    position: relative;
     display: flex;
 }
